Closed Bug 872964 Opened 12 years ago Closed 12 years ago

wrong result for getTextBeforeOffset for start word boundary at text length offset

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: surkov, Assigned: surkov)

References

Details

(Keywords: access)

Attachments

(1 file)

Attached patch patchSplinter Review
Attachment #750351 - Flags: review?(trev.saunders)
Comment on attachment 750351 [details] [diff] [review] patch >+ } else { >+ *aStartOffset = FindWordBoundary(offset, eDirPrevious, eStartWord); >+ *aEndOffset = FindWordBoundary(*aStartOffset, eDirNext, eStartWord); >+ if (*aEndOffset != offset) { >+ *aEndOffset = *aStartOffset; >+ *aStartOffset = FindWordBoundary(*aEndOffset, eDirPrevious, eStartWord); it might be faster to use a local var for the start offset so the compiler doesn't need to worry about aliasing, but I really doubt it matters.
Attachment #750351 - Flags: review?(trev.saunders) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: