Bug 872964 - wrong result for getTextBeforeOffset for start word boundary at text length offset, r=tbsaunde